--- a/index.html
+++ b/index.html
@@ -4,4 +4,11 @@
 
 <div id="root"></div>
 
-<h1>welcome to carrotchat</h1>
+<div class="home-split">
+  <div class="left-split">
+    <h2>News</h2>
+  </div>
+  <div class="right-split">
+    <h2>About us</h2>
+  </div>
+</div>
